--- a/index.html
+++ b/index.html
@@ -211,14 +211,14 @@
                     <p>
                         El Document Object Model es una estructura de árbol que representará todos nuestros proyectos web como si un árbol genealógico fuera: padres, hijos, hermanos con niveles infinitos. cuando entendemos esta anidación podemos identificar dependencias, herencias en css y que tan complejo es nuestro proyecto.
                     </p>
-                    <img src="/images/dom.png" alt="Estructura de árbol que representa al Document Object Model">
+                    <img src="./images/dom.png" alt="Estructura de árbol que representa al Document Object Model">
                     <h3 id="semantica">Semántica</h3>
                     <p>La semántica le brinda sentido a cada elemento existen en un sitio web, algunos elementos será meramente decorativos y no deben significar nada pero otros serán títulos y deberán estar en diferente jerarquías o alguna secciones serán más relevantes que otras, esto ayudará a los motores de búsqueda como Google o Duck Duck Go a diferenciar tu contenido, categorizar y será la herramientas más valiosa para estar en los primeros resultados de búsqueda SEO. También ayudará a la accesibilidad de tu sitio web, para que personas con habilidades diferentes puedan entender cada contenido.</p>
                     <h3 id="atributos">Atributos</h3>
                     <p>Los atributos le dan características extra a las etiquetas para complementar información y son pre programadas por el navegador, algunos atributos funcionan en todas las etiquetas de la misma forma como ‘class’ pero otros atributos funcionan en solo alguna etiquetas como src</p>
                     <h3 id="css">CSS</h3>
                     <p>Hojas de Estilo en Cascada (del inglés Cascading Style Sheets) o CSS es el lenguaje de estilos utilizado para describir la presentación de documentos HTML</p>
-                    <img src="/images/css.png" alt="Estructura de las hojas de estilo en cascada">
+                    <img src="./images/css.png" alt="Estructura de las hojas de estilo en cascada">
                     <h2>Modelo de caja</h2>
                 </section>
         
